# mono3d_indoor_detection

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
config/: centernet.hbm
include/: centernet_3d_detection_node.h  centernet_3d_output_parser.h  image_utils.h
launch/: mono3d_indoor_detection.launch.py  mono3d_indoor_detection_pipeline.launch.py
src/: centernet_3d_detection_node.cpp  centernet_3d_output_parser.cpp  image_publisher.cpp  image_utils.cpp  main.cpp
